Updated to DotVVM 2.3

--- a/src/BpGridViewAndMarkupControl/BpGridViewAndMarkupControl.csproj
+++ b/src/BpGridViewAndMarkupControl/BpGridViewAndMarkupControl.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.0</TargetFramework>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -23,10 +23,10 @@
         <None Remove="Views\MasterPage.dotmaster" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="DotVVM.BusinessPack" Version="2.0.0-preview11-final" />
-        <PackageReference Include="Microsoft.AspNetCore" Version="2.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.3" />
-        <PackageReference Include="DotVVM.AspNetCore" Version="2.0.0" />
+        <PackageReference Include="DotVVM.BusinessPack" Version="2.3.1" />
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+        <PackageReference Include="DotVVM.AspNetCore" Version="2.3.0" />
         
     </ItemGroup>
     <ItemGroup>
