--- a/src/BpGridViewAndMarkupControl/BpGridViewAndMarkupControl.csproj
+++ b/src/BpGridViewAndMarkupControl/BpGridViewAndMarkupControl.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
     <ItemGroup>
@@ -23,10 +23,10 @@
         <None Remove="Views\MasterPage.dotmaster" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="DotVVM.BusinessPack" Version="2.3.1" />
+        <PackageReference Include="DotVVM.BusinessPack" Version="2.4.0-trial" />
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-        <PackageReference Include="DotVVM.AspNetCore" Version="2.3.0" />
+        <PackageReference Include="DotVVM.AspNetCore" Version="2.4.0" />
         
     </ItemGroup>
     <ItemGroup>
